--- a/less/reset.less
+++ b/less/reset.less
@@ -62,6 +62,7 @@ button, input, select, textarea { margin: 0; }
 input:valid, textarea:valid   {  }
 .no-boxshadow input:invalid,
 .no-boxshadow textarea:invalid { background-color: #f0dddd; }
+address{ font-style:normal;}
 
 button {  width: auto; overflow: visible; }
 .ie7 img { -ms-interpolation-mode: bicubic; }
