--- a/less/style.less
+++ b/less/style.less
@@ -1,13 +1,12 @@
 @import "style-drapets.less";
 
-.wrapper{ width:100%; height:100%; .abs;}
-
-.header{ width:250px; height:100%; .rel; .fl; padding:40px 0 50px; background:white; .anim(400ms); z-index:50;
+@headerWidth:250px; @headerHeight:450px;
+header{ height:#headerHeight; width:@headerWidth; .fl; margin-left:-100%; padding:40px 0 50px; background:white; .anim(400ms);
 	.logo{ width:170px; height:87px; .rel; left:-5px; margin:20px auto 20px; background:url("../images/logo-black.png") no-repeat 0 0; .ir; .anim;
 		&:hover{ .op(0.5); .anim; }
 	}
 
-	.nav{ .rel;
+	nav{ .rel;
 		a{ .block; padding:7px 68px; .fs(14px); .upcase; color:lighten(black, 30% ); .anchor; .gr-book;
 			&:hover{ .gr-bold; color:black;}
 			&[data-state="Active"]{ .gr-bold; color:black; }
@@ -21,7 +20,21 @@
 	}
 }
 
-.contents{ height:100%; display:block; .fl; .rel;
+.content{ width:100%; height:100%; .fl; padding:50px 0 0 0;
+	.inner{ margin-left:@headerWidth; padding-left:40px; }
+
+		.studio{ width:45%; min-width:200px; max-width:300px; margin-right:5%;  .fl;
+			.text{ width:100%; .rel; padding:0 30px 20px 0; .gr-book; .fs(14px,18px); background:white;
+				p{ margin-bottom:15px; }
+			}
+		}
+
+		.images{ width:45%; min-width:200px; height:600px; .fl;
+			img{ width:100%; height:auto;}
+			//.img{ width:410px; height:600px; .overflow;}
+		}
+
+	/*
 	.collage{ width:100%; height:100%; .abs; .anim;
 		.img{ width:33.3333%; height:530px; display:block; .rel; .fl; z-index:2; background-position:center center; background-repeat:no-repeat; background-size:cover; .anchor;
 		}
@@ -34,12 +47,14 @@
 			&[state="Visible"]{ .op(1); }
 		}
 	}
-	.studio{
-		.text{ width:250px; .rel; left:20px; top:20px; padding:30px 30px 20px 30px; .gr-book; .fs(14px,18px); background:white;
-			p{ margin-bottom:15px; }
-		}
-		.img{ width:100%; height:100%; .fixed; left:250px;  background-position:center center; background-repeat:no-repeat; background-size:cover; }
-	}
+	*/
 
 }
 
+
+@media( max-width: 600px ) {
+	header{ .rel; left:10%;}
+	.content .inner{ margin-left:0px; margin-top:@headerHeight - 50px;
+		.studio, .images{ width:90%; float:none;}
+	}
+}
