--- a/meta.jade
+++ b/meta.jade
@@ -5,13 +5,13 @@ meta( name="viewport", content="width=device-width, initial-scale=1.0")
 
 //Basic Meta
 title Drapets :: Textile Design
-meta( name="description", content="WebsitApp Description")
-meta( name="keywords", content="Keyword1, keyword 2")
+meta( name="description", content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs.")
+meta( name="keywords", content="Barcelona, Design, textile design, graphic design, children's wear, lingerie, swimwear, clothes, upholsetry, stationery designs")
 	
 //Facebook Meta
 meta( property="og:title", 		content="Drapets" )
 meta( property="og:site_name", 	content="Drapets" )
-meta( property="og:description", content="Textile Design" )
-meta( property="og:image", content="http://imageUrl.jpg" )
+meta( property="og:description", content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs." )
+meta( property="og:image", content="./images/frame_image_01.jpg" )
 meta( property="og:url", content="http://www.drapets.com" )
 meta( property="og:type", content="website" )
