--- a/meta.jade
+++ b/meta.jade
@@ -15,3 +15,6 @@ meta( property="og:description", content="The studio has endeavored to create ou
 meta( property="og:image", content="./images/frame_image_01.jpg" )
 meta( property="og:url", content="http://www.drapets.com" )
 meta( property="og:type", content="website" )
+
+//Google Meta
+meta( name="google-site-verification", content="inENoNVgRanRXsdG9ruX05NEB_je6TudypjF772SzTQ" )
