--- a/index.jade
+++ b/index.jade
@@ -43,8 +43,8 @@ html(lange="en")
 
 			footer.direction
 				address
-					p Roslía de castro, 59
+					p Rosalía de castro, 59
 					p Barcelona
-					p (+34) 93 435 05 00
+					p (+34) 93 446 17 93
 					p
 						a(href="mailto:contact@drapets.com") contact@drapets.com
