--- a/index.jade
+++ b/index.jade
@@ -43,7 +43,7 @@ html(lange="en")
 
 			footer.direction
 				address
-					p Rosalía de castro, 59
+					p Rosalía de Castro, 59
 					p Barcelona
 					p (+34) 93 446 17 93
 					p
