--- a/index.jade
+++ b/index.jade
@@ -32,6 +32,7 @@ html(lange="en")
 		header.Header
 			h1
 				a.logo(href="./", title="Drapets, Textile Design") Drapets, Textile Design
+				
 			//nav
 				a Toddler
 				a Boys
@@ -47,4 +48,4 @@ html(lange="en")
 					p Barcelona
 					p (+34) 93 446 17 93
 					p
-						a(href="mailto:contact@drapets.com") contact@drapets.com
+						a(href="mailto:drapets@gmail.com") Contact us
